--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -14,4 +14,4 @@ jobs:
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
       - name: Run API tests
         run: |
-          postman collection run "3723629-12ed37eb-a091-437d-befe-afc3c6a1c954"
+          postman collection run 3723629-12ed37eb-a091-437d-befe-afc3c6a1c954
